[gd_scene load_steps=7 format=2]

[ext_resource path="res://levels/ending_levels/ending_level.gd" type="Script" id=1]
[ext_resource path="res://levels/common/assets/grass_and_stone/light_green/light_green.tres" type="TileSet" id=2]
[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/ending_levels/sunset.jpg" type="Texture" id=4]
[ext_resource path="res://ui/popupDialog/PopupDialog.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.4126, 139.145 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Platforms" type="Node2D" parent="."]
editor/display_folded = true

[node name="GrassAndDirt" type="TileMap" parent="Platforms"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -786352, 32, 0, -720816, 32, 0, -655280, 32, 0, -524289, 32, 0, -589744, 32, 0, -458753, 32, 0, -524208, 32, 0, -393217, 32, 0, -458672, 32, 0, -327681, 32, 0, -393136, 32, 0, -262145, 32, 0, -327600, 32, 0, -196609, 32, 0, -262064, 32, 0, -131074, 32, 0, -131073, 32, 0, -196528, 32, 0, -65537, 32, 0, -130992, 32, 0, -1, 32, 0, -65456, 32, 0, 65535, 32, 0, 0, 41, 0, 1, 41, 0, 2, 41, 0, 3, 41, 0, 4, 41, 0, 5, 41, 0, 6, 41, 0, 7, 41, 0, 8, 41, 0, 9, 41, 0, 10, 41, 0, 11, 41, 0, 12, 41, 0, 13, 41, 0, 14, 41, 0, 15, 41, 0, 16, 41, 0, 17, 41, 0, 18, 41, 0, 19, 41, 0, 20, 41, 0, 21, 41, 0, 22, 41, 0, 23, 41, 0, 24, 41, 0, 25, 41, 0, 26, 41, 0, 27, 41, 0, 28, 41, 0, 29, 41, 0, 30, 41, 0, 31, 41, 0, 32, 41, 0, 33, 41, 0, 34, 41, 0, 35, 41, 0, 36, 41, 0, 37, 41, 0, 38, 41, 0, 39, 41, 0, 40, 41, 0, 41, 41, 0, 42, 41, 0, 43, 41, 0, 44, 41, 0, 45, 41, 0, 46, 41, 0, 47, 41, 0, 48, 41, 0, 49, 41, 0, 50, 41, 0, 51, 41, 0, 52, 41, 0, 53, 41, 0, 54, 41, 0, 55, 41, 0, 56, 41, 0, 57, 41, 0, 58, 41, 0, 59, 41, 0, 60, 41, 0, 61, 41, 0, 62, 41, 0, 63, 41, 0, 64, 41, 0, 65, 41, 0, 66, 41, 0, 67, 41, 0, 68, 41, 0, 69, 41, 0, 70, 41, 0, 71, 41, 0, 72, 41, 0, 73, 41, 0, 74, 41, 0, 75, 41, 0, 76, 41, 0, 77, 41, 0, 78, 41, 0, 79, 41, 0, 80, 32, 0, 65536, 32, 0, 65537, 32, 0, 65538, 32, 0, 65539, 32, 0, 65540, 32, 0, 65541, 32, 0, 65542, 32, 0, 65543, 32, 0, 65544, 32, 0, 65545, 32, 0, 65546, 32, 0, 65547, 32, 0, 65548, 32, 0, 65549, 32, 0, 65550, 32, 0, 65551, 32, 0, 65552, 32, 0, 65553, 32, 0, 65554, 32, 0, 65555, 32, 0, 65556, 32, 0, 65557, 32, 0, 65558, 32, 0, 65559, 32, 0, 65560, 32, 0, 65561, 32, 0, 65562, 32, 0, 65563, 32, 0, 65564, 32, 0, 65565, 32, 0, 65566, 32, 0, 65567, 32, 0, 65568, 32, 0, 65569, 32, 0, 65570, 32, 0, 65571, 32, 0, 65572, 32, 0, 65573, 32, 0, 65574, 32, 0, 65575, 32, 0, 65576, 32, 0, 65577, 32, 0, 65578, 32, 0, 65579, 32, 0, 65580, 32, 0, 65581, 32, 0, 65582, 32, 0, 65583, 32, 0, 65584, 32, 0, 65585, 32, 0, 65586, 32, 0, 65587, 32, 0, 65588, 32, 0, 65589, 32, 0, 65590, 32, 0, 65591, 32, 0, 65592, 32, 0, 65593, 32, 0, 65594, 32, 0, 65595, 32, 0, 65596, 32, 0, 65597, 32, 0, 65598, 32, 0, 65599, 32, 0, 65600, 32, 0, 65601, 32, 0, 65602, 32, 0, 65603, 32, 0, 65604, 32, 0, 65605, 32, 0, 65606, 32, 0, 65607, 32, 0, 65608, 32, 0, 65609, 32, 0, 65610, 32, 0, 65611, 32, 0, 65612, 32, 0, 65613, 32, 0, 65614, 32, 0, 65615, 32, 0, 65616, 32, 0, 131072, 32, 0, 131073, 32, 0, 131074, 32, 0, 131075, 32, 0, 131076, 32, 0, 131077, 32, 0, 131078, 32, 0, 131079, 32, 0, 131080, 32, 0, 131081, 32, 0, 131082, 32, 0, 131083, 32, 0, 131084, 32, 0, 131085, 32, 0, 131086, 32, 0, 131087, 32, 0, 131088, 32, 0, 131089, 32, 0, 131090, 32, 0, 131091, 32, 0, 131092, 32, 0, 131093, 32, 0, 131094, 32, 0, 131095, 32, 0, 131096, 32, 0, 131097, 32, 0, 131098, 32, 0, 131099, 32, 0, 131100, 32, 0, 131101, 32, 0, 131102, 32, 0, 131103, 32, 0, 131104, 32, 0, 131105, 32, 0, 131106, 32, 0, 131107, 32, 0, 131108, 32, 0, 131109, 32, 0, 131110, 32, 0, 131111, 32, 0, 131112, 32, 0, 131113, 32, 0, 131114, 32, 0, 131115, 32, 0, 131116, 32, 0, 131117, 32, 0, 131118, 32, 0, 131119, 32, 0, 131120, 32, 0, 131121, 32, 0, 131122, 32, 0, 131123, 32, 0, 131124, 32, 0, 131125, 32, 0, 131126, 32, 0, 131127, 32, 0, 131128, 32, 0, 131129, 32, 0, 131130, 32, 0, 131131, 32, 0, 131132, 32, 0, 131133, 32, 0, 131134, 32, 0, 131135, 32, 0, 131136, 32, 0, 131137, 32, 0, 131138, 32, 0, 131139, 32, 0, 131140, 32, 0, 131141, 32, 0, 131142, 32, 0, 131143, 32, 0, 131144, 32, 0, 131145, 32, 0, 131146, 32, 0, 131147, 32, 0, 131148, 32, 0, 131149, 32, 0, 131150, 32, 0, 131151, 32, 0, 131152, 32, 0, 196608, 32, 0, 196609, 32, 0, 196610, 32, 0, 196611, 32, 0, 196612, 32, 0, 196613, 32, 0, 196614, 32, 0, 196615, 32, 0, 196616, 32, 0, 196617, 32, 0, 196618, 32, 0, 196619, 32, 0, 196620, 32, 0, 196621, 32, 0, 196622, 32, 0, 196623, 32, 0, 196624, 32, 0, 196625, 32, 0, 196626, 32, 0, 196627, 32, 0, 196628, 32, 0, 196629, 32, 0, 196630, 32, 0, 196631, 32, 0, 196632, 32, 0, 196633, 32, 0, 196634, 32, 0, 196635, 32, 0, 196636, 32, 0, 196637, 32, 0, 196638, 32, 0, 196639, 32, 0, 196640, 32, 0, 196641, 32, 0, 196642, 32, 0, 196643, 32, 0, 196644, 32, 0, 196645, 32, 0, 196646, 32, 0, 196647, 32, 0, 196648, 32, 0, 196649, 32, 0, 196650, 32, 0, 196651, 32, 0, 196652, 32, 0, 196653, 32, 0, 196654, 32, 0, 196655, 32, 0, 196656, 32, 0, 196657, 32, 0, 196658, 32, 0, 196659, 32, 0, 196660, 32, 0, 196661, 32, 0, 196662, 32, 0, 196663, 32, 0, 196664, 32, 0, 196665, 32, 0, 196666, 32, 0, 196667, 32, 0, 196668, 32, 0, 196669, 32, 0, 196670, 32, 0, 196671, 32, 0, 196672, 32, 0, 196673, 32, 0, 196674, 32, 0, 196675, 32, 0, 196676, 32, 0, 196677, 32, 0, 196678, 32, 0, 196679, 32, 0, 196680, 32, 0, 196681, 32, 0, 196682, 32, 0, 196683, 32, 0, 196684, 32, 0, 196685, 32, 0, 196686, 32, 0, 196687, 32, 0, 196688, 32, 0, 262144, 32, 0, 262145, 32, 0, 262146, 32, 0, 262147, 32, 0, 262148, 32, 0, 262149, 32, 0, 262150, 32, 0, 262151, 32, 0, 262152, 32, 0, 262153, 32, 0, 262154, 32, 0, 262155, 32, 0, 262156, 32, 0, 262157, 32, 0, 262158, 32, 0, 262159, 32, 0, 262160, 32, 0, 262161, 32, 0, 262162, 32, 0, 262163, 32, 0, 262164, 32, 0, 262165, 32, 0, 262166, 32, 0, 262167, 32, 0, 262168, 32, 0, 262169, 32, 0, 262170, 32, 0, 262171, 32, 0, 262172, 32, 0, 262173, 32, 0, 262174, 32, 0, 262175, 32, 0, 262176, 32, 0, 262177, 32, 0, 262178, 32, 0, 262179, 32, 0, 262180, 32, 0, 262181, 32, 0, 262182, 32, 0, 262183, 32, 0, 262184, 32, 0, 262185, 32, 0, 262186, 32, 0, 262187, 32, 0, 262188, 32, 0, 262189, 32, 0, 262190, 32, 0, 262191, 32, 0, 262192, 32, 0, 262193, 32, 0, 262194, 32, 0, 262195, 32, 0, 262196, 32, 0, 262197, 32, 0, 262198, 32, 0, 262199, 32, 0, 262200, 32, 0, 262201, 32, 0, 262202, 32, 0, 262203, 32, 0, 262204, 32, 0, 262205, 32, 0, 262206, 32, 0, 262207, 32, 0, 262208, 32, 0, 262209, 32, 0, 262210, 32, 0, 262211, 32, 0, 262212, 32, 0, 262213, 32, 0, 262214, 32, 0, 262215, 32, 0, 262216, 32, 0, 262217, 32, 0, 262218, 32, 0, 262219, 32, 0, 262220, 32, 0, 262221, 32, 0, 262222, 32, 0, 262223, 32, 0, 262224, 32, 0, 327680, 32, 0, 327681, 32, 0, 327682, 32, 0, 327683, 32, 0, 327684, 32, 0, 327685, 32, 0, 327686, 32, 0, 327687, 32, 0, 327688, 32, 0, 327689, 32, 0, 327690, 32, 0, 327691, 32, 0, 327692, 32, 0, 327693, 32, 0, 327694, 32, 0, 327695, 32, 0, 327696, 32, 0, 327697, 32, 0, 327698, 32, 0, 327699, 32, 0, 327700, 32, 0, 327701, 32, 0, 327702, 32, 0, 327703, 32, 0, 327704, 32, 0, 327705, 32, 0, 327706, 32, 0, 327707, 32, 0, 327708, 32, 0, 327709, 32, 0, 327710, 32, 0, 327711, 32, 0, 327712, 32, 0, 327713, 32, 0, 327714, 32, 0, 327715, 32, 0, 327716, 32, 0, 327717, 32, 0, 327718, 32, 0, 327719, 32, 0, 327720, 32, 0, 327721, 32, 0, 327722, 32, 0, 327723, 32, 0, 327724, 32, 0, 327725, 32, 0, 327726, 32, 0, 327727, 32, 0, 327728, 32, 0, 327729, 32, 0, 327730, 32, 0, 327731, 32, 0, 327732, 32, 0, 327733, 32, 0, 327734, 32, 0, 327735, 32, 0, 327736, 32, 0, 327737, 32, 0, 327738, 32, 0, 327739, 32, 0, 327740, 32, 0, 327741, 32, 0, 327742, 32, 0, 327743, 32, 0, 327744, 32, 0, 327745, 32, 0, 327746, 32, 0, 327747, 32, 0, 327748, 32, 0, 327749, 32, 0, 327750, 32, 0, 327751, 32, 0, 327752, 32, 0, 327753, 32, 0, 327754, 32, 0, 327755, 32, 0, 327756, 32, 0, 327757, 32, 0, 327758, 32, 0, 327759, 32, 0, 393216, 32, 0, 393217, 32, 0, 393218, 32, 0, 393219, 32, 0, 393220, 32, 0, 393221, 32, 0, 393222, 32, 0, 393223, 32, 0, 393224, 32, 0, 393225, 32, 0, 393226, 32, 0, 393227, 32, 0, 393228, 32, 0, 393229, 32, 0, 393230, 32, 0, 393231, 32, 0, 393232, 32, 0, 393233, 32, 0, 393234, 32, 0, 393235, 32, 0, 393236, 32, 0, 393237, 32, 0, 393238, 32, 0, 393239, 32, 0, 393240, 32, 0, 393241, 32, 0, 393242, 32, 0, 393243, 32, 0, 393244, 32, 0, 393245, 32, 0, 393246, 32, 0, 393247, 32, 0, 393248, 32, 0, 393249, 32, 0, 393250, 32, 0, 393251, 32, 0, 393252, 32, 0, 393253, 32, 0, 393254, 32, 0, 393255, 32, 0, 393256, 32, 0, 393257, 32, 0, 393258, 32, 0, 393259, 32, 0, 393260, 32, 0, 393261, 32, 0, 393262, 32, 0, 393263, 32, 0, 393264, 32, 0, 393265, 32, 0, 393266, 32, 0, 393267, 32, 0, 393268, 32, 0, 393269, 32, 0, 393270, 32, 0, 393271, 32, 0, 393272, 32, 0, 393273, 32, 0, 393274, 32, 0, 393275, 32, 0, 393276, 32, 0, 393277, 32, 0, 393278, 32, 0, 393279, 32, 0, 393280, 32, 0, 393281, 32, 0, 393282, 32, 0, 393283, 32, 0, 393284, 32, 0, 393285, 32, 0, 393286, 32, 0, 393287, 32, 0, 393288, 32, 0, 393289, 32, 0, 393290, 32, 0, 393291, 32, 0, 393292, 32, 0, 393293, 32, 0, 393294, 32, 0, 393295, 32, 0, 458752, 32, 0, 458753, 32, 0, 458754, 32, 0, 458755, 32, 0, 458756, 32, 0, 458757, 32, 0, 458758, 32, 0, 458759, 32, 0, 458760, 32, 0, 458761, 32, 0, 458762, 32, 0, 458763, 32, 0, 458764, 32, 0, 458765, 32, 0, 458766, 32, 0, 458767, 32, 0, 458768, 32, 0, 458769, 32, 0, 458770, 32, 0, 458771, 32, 0, 458772, 32, 0, 458773, 32, 0, 458774, 32, 0, 458775, 32, 0, 458776, 32, 0, 458777, 32, 0, 458778, 32, 0, 458779, 32, 0, 458780, 32, 0, 458781, 32, 0, 458782, 32, 0, 458783, 32, 0, 458784, 32, 0, 458785, 32, 0, 458786, 32, 0, 458787, 32, 0, 458788, 32, 0, 458789, 32, 0, 458790, 32, 0, 458791, 32, 0, 458792, 32, 0, 458793, 32, 0, 458794, 32, 0, 458795, 32, 0, 458796, 32, 0, 458797, 32, 0, 458798, 32, 0, 458799, 32, 0, 458800, 32, 0, 458801, 32, 0, 458802, 32, 0, 458803, 32, 0, 458804, 32, 0, 458805, 32, 0, 458806, 32, 0, 458807, 32, 0, 458808, 32, 0, 458809, 32, 0, 458810, 32, 0, 458811, 32, 0, 458812, 32, 0, 458813, 32, 0, 458814, 32, 0, 458815, 32, 0, 458816, 32, 0, 458817, 32, 0, 458818, 32, 0, 458819, 32, 0, 458820, 32, 0, 458821, 32, 0, 458822, 32, 0, 458823, 32, 0, 458824, 32, 0, 458825, 32, 0, 458826, 32, 0, 458827, 32, 0, 458828, 32, 0, 458829, 32, 0, 458830, 32, 0, 458831, 32, 0, 524337, 32, 0, 524338, 32, 0, 524339, 32, 0, 524340, 32, 0, 524356, 32, 0, 524357, 32, 0, 524358, 32, 0, 589881, 32, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 50, -34.0094 )

[node name="Camera2D" parent="Player/KinematicBody2D" index="4"]
position = Vector2( 2.5, 0 )
limit_left = 10
limit_right = 1280
limit_bottom = 80

[node name="Background" type="Node2D" parent="."]

[node name="SunsetPicture" type="Sprite" parent="Background"]
position = Vector2( 647.346, -234.4 )
scale = Vector2( 0.7, 0.597 )
z_index = -1
texture = ExtResource( 4 )

[node name="EndArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndArea"]
position = Vector2( 1292, -89 )
shape = SubResource( 1 )

[node name="PopupDialog" parent="." instance=ExtResource( 5 )]

[connection signal="body_entered" from="EndArea" to="." method="_on_EndArea_body_entered"]
[connection signal="pressed" from="PopupDialog/PopupDialog/PanelContainer/MarginContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]

[editable path="Player"]

[editable path="PopupDialog"]
